# RSR-MJX

./: LICENSE  README.md  T_shape.xml  T_shape_env.py  cube.xml  cube_env.py  train.py
RSR/: dataset_processor.py  losses.py  rsr_pipeline.py  train.py
airbot_sim2real_sl/: package.xml  setup.py
airbot_sim2real_sl/launch/: air_sl_arm_control.launch
airbot_sim2real_sl/scripts/: real_sensor.py
airbot_t/config/: config.yaml
airbot_t/launch/: air_t_control.launch
ppo_train/airbot_training/: train.py
ppo_train/go2_training/learning/: train_jax_ppo.py
ppo_train/go2_training/mujoco_playground/: __init__.py
ppo_train/go2_training/mujoco_playground/_src/: collision.py  gait.py  mjx_env.py  registry.py  reward.py  wrapper.py
ppo_train/go2_training/mujoco_playground/_src/locomotion/: __init__.py
ppo_train/go2_training/mujoco_playground/config/: locomotion_params.py
real_robot_inference/airbot_sim2real_sl/: CMakeLists.txt
real_robot_inference/airbot_sim2real_sl/config/: config.yaml
real_robot_inference/airbot_sim2real_sl/scripts/: marker_pose_publisher.py  sim2real_sl_control_node.py
real_robot_inference/airbot_sim2real_sl/src/airbot_sim2real_sl/: ppo_inference.py  real_robot_interface.py
real_robot_inference/airbot_t/: CMakeLists.txt  package.xml  setup.py
real_robot_inference/airbot_t/scripts/: marker_pose_publisher.py  sim2real_t_node.py
real_robot_inference/airbot_t/src/airbot_t/: ppo_inference.py  real_robot_interface.py
test/: airbot.py  rsr_env_params_tuning.py  rsr_policy_training.py  sf.xml
(+7 files in other folders)
